# opm-co2sample

./: .gitignore  CMakeLists.txt
2d/: main2d.cpp
3d/: main3d.cpp
data/: tube.grdecl
